--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="https://thriv13.github.io/portfolio/tribute-page/tributepage.html">Tribute Page</a>
+    <a href="tribute-page/tributepage.html">Tribute Page</a>
   </body>
 </html>
