--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <a href="tribute-page/tributepage.html">Tribute Page</a>
+    <a href="survey-form/surveyform.html">Survey Form</a>
+    <a href="product-landing-page/productlandingpage.html">Product Landing Page</a>
   </body>
 </html>
