--- a/tribute-page/tributepage.html
+++ b/tribute-page/tributepage.html
@@ -306,6 +306,17 @@
             href="https://en.wikipedia.org/wiki/Marie_Curie"
             target="_blank"
             >Wikipedia entry.</a
+          ><br />
+          <span style="font-size: small; font-weight: light"
+            ><a
+              >Code written by Adam Żabierek for
+              <a href="https://www.freecodecamp.org/">freeCodeCamp</a> Web
+              Development course.</a
+            ></span
+          ><br /><span style="font-size: small; font-weight: light"
+            ><a href="https://thriv13.github.io/portfolio/"
+              >Check my other projects</a
+            ></span
           >
         </p>
       </footer>
