--- a/survey-form/surveyform.html
+++ b/survey-form/surveyform.html
@@ -108,7 +108,7 @@
       width: 100%;
       height: 3em;
       border-radius: 5px;
-      background-color: rgb(84, 177, 84);
+      background-color: #54b154;
       color: rgb(231, 231, 231);
       font-family: Ubuntu;
       font-weight: bold;
@@ -293,10 +293,18 @@
         <input value="Submit!" id="submit" type="submit" />
       </form>
       <footer id="footer">
-        Code written by Adam Żabierek for
-        <a href="https://www.freecodecamp.org/">freeCodeCamp</a> Web Development
-        course.
-      </footer>
+        <br />
+        <span style="font-size: small; font-weight: light"
+          ><a
+            >Code written by Adam Żabierek for
+            <a style="color: #54b154;" href="https://www.freecodecamp.org/">freeCodeCamp</a> Web
+            Development course.</a
+          ></span
+        ><br /><span style="font-size: small; font-weight: light;"
+          ><a style="color: #54b154;" href="https://thriv13.github.io/portfolio/"
+            >Check my other projects</a
+          ></span
+        >
     </div>
   </body>
 </html>
