--- a/product-landing-page/productlandingpage.html
+++ b/product-landing-page/productlandingpage.html
@@ -165,6 +165,7 @@
       font-size: larger;
       white-space: nowrap;
       box-shadow: 0.05em 0.05em 0.2em rgb(92, 92, 92);
+      color: black;
     }
 
     .nav-link:hover {
@@ -588,18 +589,13 @@ font-family: Ubuntu;
       <div>
         Code written by Adam Żabierek for <a href="https://www.freecodecamp.org/">freeCodeCamp</a> Web Development course.
       </div>
+      <span style="font-weight: light"
+            ><a href="https://thriv13.github.io/portfolio/"
+              >Check my other projects</a
+            ></span
+          >
     </footer>
     <!--footer-->
   </body>
 </html>
 
-<!--
-    >>film wycentrowany
-    >>zrobic form
-    wystylizowac
-   >>logo na lewo, navbar na prawo
-   >>dodac features
-   3 columnowy navbar miedzy 600 a 1000px
-    dodac pricing element
-
--->
