--- a/tribute-page/tributepage.html
+++ b/tribute-page/tributepage.html
@@ -136,6 +136,7 @@
     }
   </style>
   <body class="background">
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <main id="main">
       <div id="header1container">
         <h1 id="title">Marie Skłodowska - Curie</h1>
