--- a/survey-form/surveyform.html
+++ b/survey-form/surveyform.html
@@ -126,6 +126,7 @@
   </style>
 
   <body class="background">
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div style="text-align: center">
       <h1 style="color: rgb(231, 231, 231)" id="title">Example Survey Form</h1>
     </div>
