--- a/product-landing-page/productlandingpage.html
+++ b/product-landing-page/productlandingpage.html
@@ -467,6 +467,7 @@ font-family: Ubuntu;
 
   </style>
   <body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <!--Header-->
     <div>
     <header id="header">
