--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Portfolio - Adam Żabierek</title>
   </head>
   <body>
-    <a href="tribute-page/tributepage.html">Tribute Page</a>
+    <a href="tribute-page/index.html">Tribute Page</a>
     <br>
-    <a href="survey-form/surveyform.html">Survey Form</a>
+    <a href="survey-form/index.html">Survey Form</a>
     <br>
-    <a href="product-landing-page/productlandingpage.html">Product Landing Page</a>
+    <a href="product-landing-page/index.html">Product Landing Page</a>
   </body>
 </html>
