--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
+  <style>
+    .link {
+      font-size: larger;
+      text-decoration: none;
+    }
+  </style>
+
   <body>
-    <a href="adam-zabierek.github.io/tributepage.html">Tribute Page</a>
-    <a href="adam-zabierek.github.io/tributepage.html">Tribute Page</a>
-    <a href="adam-zabierek.github.io/tributepage.html">Tribute Page</a>
-    <a href="adam-zabierek.github.io/tributepage.html">Tribute Page</a>
+    <a class="link" href="adam-zabierek.github.io/tribute-page/index.html"
+      >Tribute Page</a
+    ><br />
+    <a class="link" href="adam-zabierek.github.io/survey-form/index.html"
+      >Survey Form</a
+    ><br />
+    <a
+      class="link"
+      href="adam-zabierek.github.io/product-landing-page/index.html"
+      >Product Landing Page</a
+    ><br />
+    <a
+      class="link"
+      href="adam-zabierek.github.io/technical-documentation-page/index.html"
+      >Technical Documentation Page</a
+    >
   </body>
 </html>
