--- a/index.html
+++ b/index.html
@@ -14,20 +14,12 @@
   </style>
 
   <body>
-    <a class="link" href="adam-zabierek.github.io/tribute-page/index.html"
-      >Tribute Page</a
-    ><br />
-    <a class="link" href="adam-zabierek.github.io/survey-form/index.html"
-      >Survey Form</a
-    ><br />
-    <a
-      class="link"
-      href="adam-zabierek.github.io/product-landing-page/index.html"
+    <a class="link" href="tribute-page/index.html">Tribute Page</a><br />
+    <a class="link" href="survey-form/index.html">Survey Form</a><br />
+    <a class="link" href="product-landing-page/index.html"
       >Product Landing Page</a
     ><br />
-    <a
-      class="link"
-      href="adam-zabierek.github.io/technical-documentation-page/index.html"
+    <a class="link" href="technical-documentation-page/index.html"
       >Technical Documentation Page</a
     >
   </body>
