--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <!-- FREE CODE CAMP TEST -->
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script id="test" src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <!-- FREE CODE CAMP TEST -->
     
 
