--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tribute Page</title>
+    <title>Tribute Page - Curie</title>
     <link href="style.css" rel="stylesheet" />
   </head>
 
@@ -82,8 +82,6 @@
                 polonium after Marie’s homeland of Poland.</small
               >
             </li>
-
-            <li></li>
 
             <li class="litext">
               <b>1903</b> -
@@ -174,26 +172,28 @@
       </div>
       <footer class="footercontainer">
         <p id="footer">
-          You can learn more about the most influential woman in history on her
-          <a
-            id="tribute-link"
-            href="https://en.wikipedia.org/wiki/Marie_Curie"
-            target="_blank"
-            >Wikipedia entry.</a
-          ><br />
           <span style="font-size: small; font-weight: light"
             ><a
               >Code written by Adam Żabierek for
               <a href="https://www.freecodecamp.org/">freeCodeCamp</a> Web
               Development course.</a
             ></span
-          ><br /><span style="font-size: small; font-weight: light"
-            ><a href="https://thriv13.github.io/portfolio/"
-              >Check my other projects</a
-            ></span
           >
         </p>
       </footer>
+
+      <div id="reference">
+        <p>
+          Informations included above where taken from
+          <a href="www.britannica.com">Britannica.com</a>
+        </p>
+        <p>
+          Photo taken from Marie Curie's
+          <a href="https://en.wikipedia.org/wiki/Marie_Curie" target="_blank"
+            >Wikipedia entry.</a
+          >
+        </p>
+      </div>
     </main>
   </body>
 </html>
