--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -172,13 +172,9 @@
       </div>
       <footer class="footercontainer">
         <p id="footer">
-          <span style="font-size: small; font-weight: light"
-            ><a
-              >Code written by Adam Żabierek for
-              <a href="https://www.freecodecamp.org/">freeCodeCamp</a> Web
-              Development course.</a
-            ></span
-          >
+          Code written by Adam Żabierek for
+          <a href="https://www.freecodecamp.org/">freeCodeCamp</a> Web
+          Development course.
         </p>
       </footer>
 
