--- a/technical-documentation-page/index.html
+++ b/technical-documentation-page/index.html
@@ -500,7 +500,7 @@
               <a href="https://www.freecodecamp.org/">freeCodeCamp</a> Web
               Development Course. All the code was written by Adam Żabierek
               (me). All the documentation was taken from MDN (see
-              <a href="#Reference">Reference</a> section.
+              <a href="#Reference">Reference</a> section).
             </p>
           </section>
           <footer id="footer">
