--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Survey Form</title>
+    <title>Survey</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body class="background">
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div style="text-align: center">
       <h1 style="color: rgb(231, 231, 231)" id="title">Example Survey Form</h1>
     </div>
